<resources>
    <string name="app_name">ChallengeBTG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">splash</string>
    <string name="search">Search</string>
    <string name="select_currency">Select currency</string>
    <string name="convert">Convert</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="no_results_found">No results found</string>
</resources>